--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           >
             <i class="fa-brands fa-linkedin"></i>
           </a>
+           <a href="https://github.com/Mario-Ehab" 
+           target="_blank">
+           <i class="fa-brands fa-github"></i>
+          </a>
         </div>
       </div>
 
@@ -195,6 +199,9 @@ I’m a fast learner, a good team player, and always looking for ways to grow an
             target="_blank"
           >
             <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://github.com/Mario-Ehab" target="_blank">
+            <i class="fa-brands fa-github"></i>
           </a>
           <p>© 2025  All Rights Reserved By  <span>Mario Ehab</span>  .</p>
         </div>
