--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ I’m a fast learner, a good team player, and always looking for ways to grow an
             <p class="project-category">Fox Games</p>
             <strong class="project-title">
               <span>Online Games</span>
-              <a href="#" class="more-details"> More Details</a>
+              <a href="https://mario-ehab.github.io/Games-Store/" class="more-details"> More Details</a>
             </strong>
           </div>
         </div>
@@ -235,4 +235,5 @@ I’m a fast learner, a good team player, and always looking for ways to grow an
 </html>
 
  
+
 
