--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
 
       <div class="main-profile">
-        <img src="images/pro.png" alt="Profile Photo" />
+        <img src="images/pro.jpg" alt="Profile Photo" />
       </div>
     </section>
 
@@ -235,6 +235,7 @@ I’m a fast learner, a good team player, and always looking for ways to grow an
 </html>
 
  
+
 
 
 
